hphp/hack/test/typecheck/reactive/test_global_class.php.exp
File "test_global_class.php", line 10, characters 8-26:
This is global; you cannot access or write to globals in a reactive context (NastCheck[3049])
